2-july-2024/pojok_lelang-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pojok-lelang
  namespace: pojok-lelang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pojok-lelang
  template:
    metadata:
      labels:
        app: pojok-lelang
    spec:
      containers:
      - name: pojok-lelang
        image: chandanteekinavar/pojok_lelang:1.0
        ports:
        - containerPort: 8000
