2-july-2024/pojok_lelang-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pojok-lelang
  namespace: pojok-lelang
spec:
  # type: NodePort
  selector:
    app: pojok-lelang
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      #nodePort: 30080
