2-july-2024/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pojok-lelang-ingress
  namespace: pojok-lelang 
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pojok-lelang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pojok-lelang
                port:
                  number: 80
